--- a/frontend/poll-system/public/index.html
+++ b/frontend/poll-system/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -26,7 +27,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #8F50FB">
+  <body id="body-style">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
